SERVER-61495 Fix "--replset" error message typo

Error parsing command line: unrecognised option '--replset'
    try 'mongod --help' for more information

Signed-off-by: edzh <edwinzzhou@gmail.com>

Closes #1430